--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -7,7 +7,7 @@
 <body>
 
   <% include ../partials/nav.ejs %>
-  <% process.env.DATABASE_URL %>
+  34545<% process.env.DATABASE_URL %>45353
 
 <div class="jumbotron text-center">
   <div class="container">
