--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -7,7 +7,7 @@
 <body>
 
   <% include ../partials/nav.ejs %>
-  34545<%=process.env.PORT %>45353
+  <%=process.env.PORT %>
 
 <div class="jumbotron text-center">
   <div class="container">
