--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -7,7 +7,7 @@
 <body>
 
   <% include ../partials/nav.ejs %>
-  <%=process.env.PORT %>
+  <%=process.env.DATABASE_URL %>
 
 <div class="jumbotron text-center">
   <div class="container">
